# dsc-energy-academy-pipeline

./: Makefile  README.md  main.ipynb  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: one_time_push.yml
00_API/: all_lesson_ids.txt  app.py  data pipeline format.json  figma_frames_5cH2oMyNQPZ1w9fUPM9Mfe.json  figma_frames_XN57QSSgnI4exbB2OTK1QM.json  module_structure.json
00_API/Module 1/: 1.1.0.json  1.1.1.json  1.1.2.json  1.1.3.json  1.1.4.json  1.2.-1.json  1.2.0.json  1.2.3.json  1.2.4.json  1.3.-1.json  1.3.0.json  1.3.5.json  1.4.0.json
00_API/Module 2/: 2.2.-1.json  2.2.0.json  2.2.2.json  2.2.3.json  2.3.-1.json  2.3.0.json  2.3.1.json  2.3.2.json
00_API/Module 3/: 3.-1.0.json  3.0.0.json  3.1.-1.json  3.1.2.json  3.1.3.json  3.2.-1.json  3.2.0.json  3.2.4.json  3.3.2.json  3.4.-1.json  3.4.0.json  3.4.1.json  3.4.2.json  3.4.3.json
00_API/Module 4/: 4.0.0.json  4.1.1.json  4.1.2.json  4.1.3.json  4.2.0.json  4.2.1.json  4.2.2.json  4.2.3.json  4.3.0.json  4.3.1.json  4.3.2.json  4.4.2.json  4.4.3.json  4.5.2.json  4.5.3.json
00_API/Module 5/: 5.0.0.json  5.1.-1.json  5.1.0.json  5.1.2.json  5.2.-1.json  5.2.1.json  5.2.2.json  5.2.4.json  5.3.2.json  5.4.-1.json  5.5.-1.json
00_API/Module 6/: 6.-1.0.json  6.0.0.json  6.1.1.json  6.1.2.json  6.2.-1.json  6.2.1.json  6.3.-1.json  6.3.1.json  6.3.2.json  6.3.3.json  6.4.2.json  6.4.3.json
01_Results/: figma_frames_5cH2oMyNQPZ1w9fUPM9Mfe.csv  figma_frames_XN57QSSgnI4exbB2OTK1QM.csv
02_Code/: Data_Parsing.ipynb  Figma files extraction.ipynb  fake academy.ipynb
(+704 files in other folders)
