[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sea"
dynamic = ["version", "dependencies", "optional-dependencies"]
keywords = ["ETL", "Sustainable Energy Academy"]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.setuptools.dynamic]
version = {attr = "sea.__version__"}
dependencies = { file = ["requirements.txt"] }
optional-dependencies.dev = { file = ["requirements_dev.txt"] }
